@@ -5,11 +5,15 @@ Released ????? ??, ????
 
 - Support for Djibouti (Abdisamade)
 - Support for United Arab Emirates (marcomasulli, mborsetti)
+- Support for Chile (mborsetti, dr-p)
 - Korea 2020 fix (MYUNGJE, dr-p)
 - Australia 2020 fix (bencollerson, trauty-is-me)
-- Croatia fixes (jangrg, dr-p)
-- United States fixes (raffg, dr-p)
+- Croatia fixes and updates (jangrg, mborsetti, dr-p)
+- United States fixes (raffg, bgmiles, dr-p)
 - UK fixes (dr-p, richard-kunert)
+- Russia fixes (tserekh)
+- Ireland fixes (chiuczek)
+- France fix (mborsetti)
 
 
 Version 0.10.3
